# University-Finance-Management_Backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 525306e5ea86_all_the_tables_are_getting_added_in_the_.py  e0efc322108e_adding_export_table.py
app/: __main__.py  main.py  utils.py
app/core/: auth.py  cache.py  config.py  deps.py  email.py  logging.py  middleware.py  rbac.py  security.py
app/db/: audit.py  session.py
app/models/: audit.py  base.py  budget.py  department.py  export_history.py  init.py  notification.py  report.py  session.py  transaction.py  user.py
app/routers/: account.py  audit.py  auth.py  auth_2fa.py  budgets.py  dashboard.py  departments.py  exports.py  health.py  init.py  notifications.py  reports.py  sessions.py  transactions.py  users.py
app/schemas/: audit.py  budget.py  department.py  init.py  notification.py  report.py  session.py  transaction.py  user.py
app/services/: __init__.py  budget.py  department.py  report.py  transaction.py  user.py
app/utils/: pagination.py
tests/: conftest.py  test_audit.py  test_auth.py  test_dashboard.py  test_departments.py  test_models.py  test_reports.py  test_services.py
